# cookiecutter-data-science

./: README.md  cookiecutter.json
{{ cookiecutter.repo_name }}/: .gitlab-ci.yml  MANIFEST.in  README.md  dev-requirements.txt  pyproject.toml  requirements.txt  setup.py  test_environment.py  tox.ini
{{ cookiecutter.repo_name }}/docs/: conf.py
{{ cookiecutter.repo_name }}/src/{{ cookiecutter.repo_name }}/data/: make_dataset.py
